--- a/client/index.html
+++ b/client/index.html
@@ -5,5 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <h1>Welcome to LoopIn</h1>
+      <form>
+        <input type="text" name="displayName" placeholder="Display name" />
+        <input type="text" name="groupName" placeholder="Group name" />
+        <input type="password" name="password" placeholder="Password" />
+        <button type="submit" id="join">Join</button>
+        <button type="submit" id="create">Create</button>
+      </form>
+    </main>
+  </body>
 </html>
