add landing create and errors

--- a/client/index.html
+++ b/client/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css" />
     <script type="module" src="./app.js" defer></script>
   </head>
   <body>
+    <header>
+      <h1>LoopIn</h1>
+    </header>
     <main>
-      <h1>Welcome to LoopIn</h1>
+      <h2>Welcome to LoopIn</h2>
       <form>
         <p id="displayNameError"></p>
         <input type="text" name="displayName" placeholder="Display name" />
@@ -20,5 +24,6 @@
         <button type="submit" id="create">Create</button>
       </form>
     </main>
+    <footer>Copyright 2024</footer>
   </body>
 </html>
