--- a/client/projectPage/index.html
+++ b/client/projectPage/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <main>
+      <h2>Display Group Name Here</h2>
+
       <h1>Create Your Project Tasks</h1>
       <form id="tasks-container">
         <input type="text" name="tasks-name" placeholder="Task Name" />
