--- a/client/projectPage/index.html
+++ b/client/projectPage/index.html
@@ -16,6 +16,7 @@
           <li><a href="calender-page">Calendar</a></li>
           <li><a href="chat-page">Chat</a></li>
         </ul>
+        <button id="membersBtn">Members</button>
       </nav>
     </header>
     <main>
