--- a/client/projectPage/index.html
+++ b/client/projectPage/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wk5 Project Page</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="/projectPage/style.css" />
     <script type="module" src="./app.js" defer></script>
   </head>
   <body>
