Fixed task draw & add styling

--- a/client/projectPage/index.html
+++ b/client/projectPage/index.html
@@ -9,9 +9,10 @@
   </head>
   <body>
     <header>
+      <h1 id="groupTitle"></h1>
       <nav>
         <ul>
-          <li><a href="projects-page">Project</a></li>
+          <li><a href="http://127.0.0.1:5173/projectPage/">Project</a></li>
           <li><a href="calender-page">Calendar</a></li>
           <li><a href="chat-page">Chat</a></li>
         </ul>
@@ -21,17 +22,9 @@
     <main>
       <!--  -->
       <div id="returned-container">
-        <div id="ToDo">
-          <p>To Do</p>
-        </div>
-
-        <div id="Doing">
-          <p>Doing</p>
-        </div>
-
-        <div id="Done">
-          <p>Done!</p>
-        </div>
+        <div id="ToDo"></div>
+        <div id="Doing"></div>
+        <div id="Done"></div>
       </div>
       <!--  -->
 
@@ -63,5 +56,6 @@
         <button type="submit" id="submit">Add Task to Project</button>
       </form>
     </main>
+    <footer>Copyright 2024</footer>
   </body>
 </html>
