--- a/client/projectPage/index.html
+++ b/client/projectPage/index.html
@@ -28,7 +28,7 @@
       </div>
       <!--  -->
 
-      <form id="task-container">
+      <form id="task-container" class="notActive">
         <h1>Create A Task</h1>
         <p id="displayName"></p>
         <input type="text" name="name" placeholder="Task Name" />
@@ -55,6 +55,7 @@
         </select>
         <button type="submit" id="submit">Add Task to Project</button>
       </form>
+      <button id="toggleActive"></button>
     </main>
     <footer>Copyright 2024</footer>
   </body>
