--- a/client/task/index.html
+++ b/client/task/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <header>
-      <h2>Loopin</h2>
+      <h1 id="groupTitle"></h1>
       <nav>
         <ul>
-          <li><a href="http://localhost:5173/projectPage/">Project</a></li>
+          <li><a href="http://127.0.0.1:5173/projectPage/">Project</a></li>
           <li><a href="calender-page">Calendar</a></li>
           <li><a href="chat-page">Chat</a></li>
         </ul>
