Add member drop down to task page

--- a/client/task/index.html
+++ b/client/task/index.html
@@ -46,8 +46,8 @@
         <!-- Section for displaying task details such as assignees, task details and due date -->
         <div class="task-detailcard">
           <div class="task-assignee">
-            <label for="assignee">Assigned to: </label>
-            <input type="text" id="assignee" />
+            <label for="task-assignees">Assigned to: </label>
+            <select name="task-assignees" id="task-assignees"></select>
           </div>
           <div class="task-details">
             <label for="details">Details: </label>
