--- a/client/task/index.html
+++ b/client/task/index.html
@@ -14,7 +14,7 @@
         <ul>
           <li><a href="http://127.0.0.1:5173/projectPage/">Project</a></li>
           <li><a href="calender-page">Calendar</a></li>
-          <li><a href="chat-page">Chat</a></li>
+          <li><a href="http://127.0.0.1:5173/chat/">Chat</a></li>
         </ul>
       </nav>
     </header>
