Add 'none selected' option for assigned task member

--- a/client/task/index.html
+++ b/client/task/index.html
@@ -47,7 +47,9 @@
         <div class="task-detailcard">
           <div class="task-assignee">
             <label for="task-assignees">Assigned to: </label>
-            <select name="task-assignees" id="task-assignees"></select>
+            <select name="task-assignees" id="task-assignees">
+              <option value="null">None Selected</option>
+            </select>
           </div>
           <div class="task-details">
             <label for="details">Details: </label>
