--- a/client/projectPage/index.html
+++ b/client/projectPage/index.html
@@ -12,9 +12,11 @@
       <h1 id="groupTitle"></h1>
       <nav>
         <ul>
-          <li><a href="http://127.0.0.1:5173/projectPage/">Project</a></li>
+          <li>
+            <a href="https://loopin.onrender.com/projectPage/">Project</a>
+          </li>
           <li><a href="calender-page">Calendar</a></li>
-          <li><a href="http://127.0.0.1:5173/chat/">Chat</a></li>
+          <li><a href="https://loopin.onrender.com/chat/">Chat</a></li>
         </ul>
       </nav>
       <button id="membersBtn">Members</button>
