--- a/client/projectPage/index.html
+++ b/client/projectPage/index.html
@@ -19,6 +19,7 @@
           <li><a href="https://loopin.onrender.com/chat/">Chat</a></li>
         </ul>
       </nav>
+      <button id="signout">Sign out</button>
       <button id="membersBtn">Members</button>
     </header>
     <main>
