Add link to about page & standardised footers

--- a/client/about/index.html
+++ b/client/about/index.html
@@ -9,6 +9,7 @@
   <body>
     <header>
       <h1>About Us</h1>
+      <a href="https://loopin.onrender.com/projectPage">Go Back</a>
     </header>
 
     <main>
