--- a/client/task/index.html
+++ b/client/task/index.html
@@ -60,14 +60,16 @@
             <input type="date" id="due" />
           </div>
         </div>
-        <!-- Section for displaying the view in calendar button -->
+        <!-- Section for displaying action buttons -->
         <div id="task-buttons">
           <button id="task-update-btn">Update Task</button>
           <button id="task-delete-btn">Delete Task</button>
-          <button id="task-calendar-btn">View In Calendar</button>
         </div>
       </div>
     </main>
-    <footer><p>Copyright placeholder</p></footer>
+    <footer>
+      <a href="https://loopin.onrender.com/about">About Us</a>
+      <p>&copy; 2024 Loopin.</p>
+    </footer>
   </body>
 </html>
