--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,9 @@
         <button type="submit" id="create">Create</button>
       </form>
     </main>
-    <footer>Copyright 2024</footer>
+    <footer>
+      <a href="https://loopin.onrender.com/about">About Us</a>
+      <p>Copyright 2024</p>
+    </footer>
   </body>
 </html>
