update nav & add page titles

--- a/client/task/index.html
+++ b/client/task/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task Page</title>
+    <title>Task</title>
     <link rel="stylesheet" href="./style.css" />
     <script src="./app.js" type="module" defer></script>
   </head>
@@ -15,7 +15,6 @@
           <li>
             <a href="https://loopin.onrender.com/projectPage/">Project</a>
           </li>
-          <li><a href="calender-page">Calendar</a></li>
           <li><a href="https://loopin.onrender.com/chat/">Chat</a></li>
         </ul>
       </nav>
