--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>LoopIn</title>
     <link rel="stylesheet" href="./style.css" />
     <script type="module" src="./app.js" defer></script>
   </head>
@@ -26,7 +26,7 @@
     </main>
     <footer>
       <a href="https://loopin.onrender.com/about">About Us</a>
-      <p>Copyright 2024</p>
+      <p>&copy; 2024 Loopin.</p>
     </footer>
   </body>
 </html>
