Update chat page footer, get tasks when new task created

--- a/client/chat/index.html
+++ b/client/chat/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat</title>
+    <title>Chat - Loopin</title>
     <script type="module" src="./app.js" defer></script>
     <link rel="stylesheet" href="./style.css" />
   </head>
@@ -31,6 +31,9 @@
         <button type="submit" id="msgBtn">Send</button>
       </form>
     </main>
-    <footer>Copyright 2024</footer>
+    <footer>
+      <a href="https://loopin.onrender.com/about">About Us</a>
+      <p>&copy; 2024 Loopin.</p>
+    </footer>
   </body>
 </html>
